--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="gmdevapi is a personal project created by _gmdev."
+      content="gmdevapi is a simple multipurpose API powered by CloudFlares edge computing technology , tailwindCSS, and React.js"
     />
-    
+    <meta
+      name="gmdevapi.com"
+      property="website"
+      content="gmdevapi is a simple multipurpose API powered by CloudFlares edge computing technology , tailwindCSS, and React.js"
+    />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/img/LogoApi.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/img/LogoApi.png">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
