--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
       content="gmdevapi is a simple multipurpose API powered by CloudFlares edge computing technology , tailwindCSS, and React.js"
     />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/img/LogoApi.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/img/LogoApi.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/LogoApi.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/LogoApi.png">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
